github/lazyfoo/46_multithreading/make.log
g++ 46_multithreading.cpp -w -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer -o 46_multithreading
46_multithreading.cpp: In function ‘int threadFunction(void*)’:
46_multithreading.cpp:531:53: error: cast from ‘void*’ to ‘int’ loses precision [-fpermissive]
  531 |         printf( "Running thread with value = %d\n", reinterpret_cast<int> (data) );
      |                                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:23：all] 错误 1
